// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`should match the snapshot when the menu is undefined 1`] = `
<DocumentFragment>
  .emotion-0 {
  padding: 0 0.5rem;
  margin: 1px;
  cursor: pointer;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  border: 1px solid transparent;
}

.emotion-0[aria-current='true'] {
  background-color: #e6e6e6;
}

.emotion-0:hover {
  background-color: #f0f0f0;
}

.emotion-1 {
  display: grid;
  grid-template-rows: auto;
  grid-template-columns: 1fr auto auto;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: start;
  -ms-flex-pack: start;
  -webkit-justify-content: start;
  justify-content: start;
}

.emotion-1>button:last-of-type {
  visibility: inherit;
}

.emotion-1:hover>button:last-of-type {
  visibility: inherit;
}

.emotion-2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: start;
  -ms-flex-pack: start;
  -webkit-justify-content: start;
  justify-content: start;
  padding: 0;
  border: 0;
}

.emotion-3 {
  display: grid;
  grid-template-rows: auto;
  grid-template-columns: auto 1fr;
  grid-gap: 0.25rem;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: start;
  -ms-flex-pack: start;
  -webkit-justify-content: start;
  justify-content: start;
}

.emotion-4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  width: 2rem;
  height: 2rem;
}

.emotion-5 {
  overflow: hidden;
  text-overflow: ellipsis;
  white-space: nowrap;
}

<div
    class="fui-FluentProvider fui-FluentProvider_r_4_ ___jdtuxv0_17k0bs4 f19n0e5 fxugw4r f1o700av fk6fouc fkhj508 figsok6 f1i3iumi"
    dir="ltr"
  >
    <div
      aria-current="false"
      class="emotion-0"
      role="menuitem"
      tabindex="0"
    >
      <div
        class="emotion-1"
      >
        <button
          class="fui-Button r1alrhcs emotion-2 ___1l7x4iu_uc18yd0 f1c21dwh f1p3nwhy f11589ue f1q5o8ev f1pdflbu fkfq4zb fjxutwb f1s2uweq fr80ssc f1ukrpxl fecsdlb f139oj5f ft1hn21 fuxngvv fwiml72 f1h0usnq fs4ktlq f16h9ulv fx2bmrt f1fg1p5m f1dfjoow f1j98vj9 fxoo9op f1v3eptx f11slz88 fqfbdvs"
          tabindex="-1"
          type="button"
        >
          <div
            class="emotion-3"
          >
            <div
              class="emotion-4"
            >
              <div
                data-testid="test-Icon"
              />
            </div>
            <span
              class="fui-Text emotion-5 ___c56hd20_1xy0w11 fk6fouc fkhj508 f1i3iumi figsok6 fpgzoln f1w7gpdv f6juhto f1gl81tg f2jf649"
            >
              Markdown.md
            </span>
          </div>
        </button>
        <div
          data-testid="test-Info"
        />
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`should match the snapshot when the selected is false 1`] = `
<DocumentFragment>
  .emotion-0 {
  padding: 0 0.5rem;
  margin: 1px;
  cursor: pointer;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  border: 1px solid transparent;
}

.emotion-0[aria-current='true'] {
  background-color: #e6e6e6;
}

.emotion-0:hover {
  background-color: #f0f0f0;
}

.emotion-1 {
  display: grid;
  grid-template-rows: auto;
  grid-template-columns: 1fr auto auto;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: start;
  -ms-flex-pack: start;
  -webkit-justify-content: start;
  justify-content: start;
}

.emotion-1>button:last-of-type {
  visibility: hidden;
}

.emotion-1:hover>button:last-of-type {
  visibility: inherit;
}

.emotion-2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: start;
  -ms-flex-pack: start;
  -webkit-justify-content: start;
  justify-content: start;
  padding: 0;
  border: 0;
}

.emotion-3 {
  display: grid;
  grid-template-rows: auto;
  grid-template-columns: auto 1fr;
  grid-gap: 0.25rem;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: start;
  -ms-flex-pack: start;
  -webkit-justify-content: start;
  justify-content: start;
}

.emotion-4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  width: 2rem;
  height: 2rem;
}

.emotion-5 {
  overflow: hidden;
  text-overflow: ellipsis;
  white-space: nowrap;
}

<div
    class="fui-FluentProvider fui-FluentProvider_r_2_ ___jdtuxv0_17k0bs4 f19n0e5 fxugw4r f1o700av fk6fouc fkhj508 figsok6 f1i3iumi"
    dir="ltr"
  >
    <div
      aria-current="false"
      class="emotion-0"
      role="menuitem"
      tabindex="0"
    >
      <div
        class="emotion-1"
      >
        <button
          class="fui-Button r1alrhcs emotion-2 ___1l7x4iu_uc18yd0 f1c21dwh f1p3nwhy f11589ue f1q5o8ev f1pdflbu fkfq4zb fjxutwb f1s2uweq fr80ssc f1ukrpxl fecsdlb f139oj5f ft1hn21 fuxngvv fwiml72 f1h0usnq fs4ktlq f16h9ulv fx2bmrt f1fg1p5m f1dfjoow f1j98vj9 fxoo9op f1v3eptx f11slz88 fqfbdvs"
          tabindex="-1"
          type="button"
        >
          <div
            class="emotion-3"
          >
            <div
              class="emotion-4"
            >
              <div
                data-testid="test-Icon"
              />
            </div>
            <span
              class="fui-Text emotion-5 ___c56hd20_1xy0w11 fk6fouc fkhj508 f1i3iumi figsok6 fpgzoln f1w7gpdv f6juhto f1gl81tg f2jf649"
            >
              Markdown.md
            </span>
          </div>
        </button>
        <div
          data-testid="test-Info"
        />
        <button
          aria-haspopup="menu"
          aria-label="More option"
          class="fui-Button r1alrhcs ___y6j8zu0_4tg1lt0 f1c21dwh f1p3nwhy f11589ue f1q5o8ev f1pdflbu fkfq4zb fjxutwb f1s2uweq fr80ssc f1ukrpxl fecsdlb f139oj5f ft1hn21 fuxngvv fwiml72 f1h0usnq fs4ktlq f16h9ulv fx2bmrt f1fg1p5m f1dfjoow f1j98vj9 fxoo9op f1v3eptx f11slz88 fqfbdvs f18ktai2 fwbmr0d f44c6la"
          id="menu_r_3_"
          role="button"
          tabindex="0"
          title="More option"
          type="button"
        >
          <span
            class="fui-Button__icon rywnvv2"
          >
            <svg
              aria-hidden="true"
              class="___9ctc0p0_1xvj9ao f1w7gpdv fez10in f1dd5bof"
              fill="currentColor"
              height="16"
              viewBox="0 0 16 16"
              width="16"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M8 5a1 1 0 1 1 0-2 1 1 0 0 1 0 2Zm0 4a1 1 0 1 1 0-2 1 1 0 0 1 0 2Zm-1 3a1 1 0 1 0 2 0 1 1 0 0 0-2 0Z"
                fill="currentColor"
              />
            </svg>
          </span>
        </button>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`should match the snapshot when the selected is true 1`] = `
<DocumentFragment>
  .emotion-0 {
  padding: 0 0.5rem;
  margin: 1px;
  cursor: pointer;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  border: 1px solid transparent;
}

.emotion-0[aria-current='true'] {
  background-color: #e6e6e6;
}

.emotion-0:hover {
  background-color: #f0f0f0;
}

.emotion-1 {
  display: grid;
  grid-template-rows: auto;
  grid-template-columns: 1fr auto auto;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: start;
  -ms-flex-pack: start;
  -webkit-justify-content: start;
  justify-content: start;
}

.emotion-1>button:last-of-type {
  visibility: hidden;
}

.emotion-1:hover>button:last-of-type {
  visibility: inherit;
}

.emotion-2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: start;
  -ms-flex-pack: start;
  -webkit-justify-content: start;
  justify-content: start;
  padding: 0;
  border: 0;
}

.emotion-3 {
  display: grid;
  grid-template-rows: auto;
  grid-template-columns: auto 1fr;
  grid-gap: 0.25rem;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: start;
  -ms-flex-pack: start;
  -webkit-justify-content: start;
  justify-content: start;
}

.emotion-4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  width: 2rem;
  height: 2rem;
}

.emotion-5 {
  overflow: hidden;
  text-overflow: ellipsis;
  white-space: nowrap;
}

<div
    class="fui-FluentProvider fui-FluentProvider_r_0_ ___jdtuxv0_17k0bs4 f19n0e5 fxugw4r f1o700av fk6fouc fkhj508 figsok6 f1i3iumi"
    dir="ltr"
  >
    <div
      aria-current="true"
      class="emotion-0"
      role="menuitem"
      tabindex="0"
    >
      <div
        class="emotion-1"
      >
        <button
          class="fui-Button r1alrhcs emotion-2 ___1l7x4iu_uc18yd0 f1c21dwh f1p3nwhy f11589ue f1q5o8ev f1pdflbu fkfq4zb fjxutwb f1s2uweq fr80ssc f1ukrpxl fecsdlb f139oj5f ft1hn21 fuxngvv fwiml72 f1h0usnq fs4ktlq f16h9ulv fx2bmrt f1fg1p5m f1dfjoow f1j98vj9 fxoo9op f1v3eptx f11slz88 fqfbdvs"
          tabindex="-1"
          type="button"
        >
          <div
            class="emotion-3"
          >
            <div
              class="emotion-4"
            >
              <div
                data-testid="test-Icon"
              />
            </div>
            <span
              class="fui-Text emotion-5 ___c56hd20_1xy0w11 fk6fouc fkhj508 f1i3iumi figsok6 fpgzoln f1w7gpdv f6juhto f1gl81tg f2jf649"
            >
              Markdown.md
            </span>
          </div>
        </button>
        <div
          data-testid="test-Info"
        />
        <button
          aria-haspopup="menu"
          aria-label="More option"
          class="fui-Button r1alrhcs ___y6j8zu0_4tg1lt0 f1c21dwh f1p3nwhy f11589ue f1q5o8ev f1pdflbu fkfq4zb fjxutwb f1s2uweq fr80ssc f1ukrpxl fecsdlb f139oj5f ft1hn21 fuxngvv fwiml72 f1h0usnq fs4ktlq f16h9ulv fx2bmrt f1fg1p5m f1dfjoow f1j98vj9 fxoo9op f1v3eptx f11slz88 fqfbdvs f18ktai2 fwbmr0d f44c6la"
          id="menu_r_1_"
          role="button"
          tabindex="0"
          title="More option"
          type="button"
        >
          <span
            class="fui-Button__icon rywnvv2"
          >
            <svg
              aria-hidden="true"
              class="___9ctc0p0_1xvj9ao f1w7gpdv fez10in f1dd5bof"
              fill="currentColor"
              height="16"
              viewBox="0 0 16 16"
              width="16"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M8 5a1 1 0 1 1 0-2 1 1 0 0 1 0 2Zm0 4a1 1 0 1 1 0-2 1 1 0 0 1 0 2Zm-1 3a1 1 0 1 0 2 0 1 1 0 0 0-2 0Z"
                fill="currentColor"
              />
            </svg>
          </span>
        </button>
      </div>
    </div>
  </div>
</DocumentFragment>
`;
